css/main.css
@font-face {
  font-display: swap;
  font-family: 'lato_regular';
  src: url("../fonts/LatoLatin-Regular.woff2") format("woff2"), url("../fonts/LatoLatin-Regular.woff") format("woff");
  font-style: normal;
  font-weight: normal;
  text-rendering: optimizeLegibility; }
@font-face {
  font-display: swap;
  font-family: 'lato_light';
  src: url("../fonts/LatoLatin-Light.woff2") format("woff2"), url("../fonts/LatoLatin-Light.woff") format("woff");
  font-style: normal;
  font-weight: normal;
  font-display: swap; }
@font-face {
  font-display: swap;
  font-family: 'lato_hairline';
  src: url("../fonts/LatoLatin-Hairline.woff2") format("woff2"), url("../fonts/LatoLatin-Hairline.woff") format("woff");
  font-style: normal;
  font-weight: normal;
  text-rendering: optimizeLegibility; }
@font-face {
  font-display: swap;
  font-family: 'lato_semibold';
  src: url("../fonts/LatoLatin-Semibold.woff2") format("woff2"), url("../fonts/LatoLatin-Semibold.woff") format("woff");
  font-style: normal;
  font-weight: normal;
  text-rendering: optimizeLegibility; }
@font-face {
  font-display: swap;
  font-family: 'lato_bold';
  src: url("../fonts//LatoLatin-Bold.woff2") format("woff2"), url("../fonts//LatoLatin-Bold.woff") format("woff");
  font-style: normal;
  font-weight: bold;
  text-rendering: optimizeLegibility; }
html,
body {
  height: 100%;
  width: 100%; }

body {
  font-family: 'lato_regular', sans-serif;
  font-size: 18px;
  line-height: 26px; }

hr {
  border-color: #00ADE6;
  border-width: 3px;
  max-width: 50px; }

hr.light {
  border-color: white; }

a {
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s;
  color: #00ADE6;
  outline: none; }
  a:hover, a:focus {
    color: #0087b3;
    outline: none; }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'lato_light', sans-serif; }

h2 {
  color: #00ADE6;
  margin-bottom: 30px;
  font-size: 32px;
  font-weight: 300; }

p {
  font-size: 18px;
  line-height: 1.5;
  margin-bottom: 20px; }

.bg-primary {
  background-color: #00ADE6; }

.bg-dark {
  background-color: #102F52;
  color: white; }

.text-white {
  color: #ffffff; }

.text-faded {
  color: rgba(255, 255, 255, 0.7); }

.text-muted {
  color: #ffffff;
  font-size: 12px; }

section {
  padding: 115px 0 40px; }

aside {
  padding: 50px 0; }

.no-padding {
  padding: 0; }

.list-group {
  margin-bottom: 0; }
  .list-group .list-group-item {
    border-width: 0;
    min-height: 50px; }
    .list-group .list-group-item img {
      margin-right: 20px; }
    .list-group .list-group-item .list-group-item-text {
      line-height: 26px;
      padding-right: 20px; }

.navbar-default {
  background-color: white;
  border-color: rgba(16, 47, 82, 0.5);
  border-width: 0;
  font-family: 'lato_regular', Arial, sans-serif;
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s; }
  @media (max-width: 768px) {
    .navbar-default .navbar-brand {
      padding-top: 5px; } }
  @media (min-width: 769px) {
    .navbar-default .navbar-brand {
      height: 85px; } }
  .navbar-default .navbar-notice {
    padding-top: 20px;
    padding-left: 70px;
    font-weight: 700; }
  .navbar-default .navbar-header .navbar-brand, .navbar-default .navbar-notice {
    color: white;
    font-family: 'lato_regular', Arial, sans-serif;
    font-size: 12px; }
  .navbar-default .nav > li > a,
  .navbar-default .nav > li > a:focus {
    text-transform: uppercase;
    font-weight: 700;
    font-size: 13px;
    color: #102F52;
    outline: none; }
    .navbar-default .nav > li > a:hover,
    .navbar-default .nav > li > a:focus:hover {
      color: #00ADE6; }
  .navbar-default .nav > li.active > a,
  .navbar-default .nav > li.active > a:focus {
    color: #00ADE6 !important;
    background-color: transparent; }
    .navbar-default .nav > li.active > a:hover,
    .navbar-default .nav > li.active > a:focus:hover {
      background-color: transparent; }
  .navbar-default .nav.navbar-nav {
    float: none;
    width: 100%;
    text-align: center; }
    .navbar-default .nav.navbar-nav > li {
      float: none;
      display: inline-block; }
  @media (min-width: 769px) {
    .navbar-default {
      min-height: 155px;
      background-color: transparent; }
      .navbar-default .nav > li > a,
      .navbar-default .nav > li > a:focus {
        color: rgba(255, 255, 255, 0.7); }
        .navbar-default .nav > li > a:hover,
        .navbar-default .nav > li > a:focus:hover {
          color: white; }
      .navbar-default.affix {
        background-color: white;
        border-color: rgba(16, 47, 82, 0.5); }
        .navbar-default.affix .navbar-header .navbar-brand, .navbar-default.affix .navbar-notice {
          color: #000000; }
        .navbar-default.affix .nav > li > a,
        .navbar-default.affix .nav > li > a:focus {
          color: #102F52; }
          .navbar-default.affix .nav > li > a:hover,
          .navbar-default.affix .nav > li > a:focus:hover {
            color: #00ADE6; } }

header {
  position: relative;
  width: 100%;
  min-height: auto;
  background-repeat: no-repeat;
  background-color: #102F52;
  background-size: 100% auto;
  background-position: center top;
  background-image: url("../img/header.jpg");
  text-align: center;
  color: white; }
  header .header-content {
    position: relative;
    text-align: center;
    padding: 100px 15px 100px;
    width: 100%; }
    header .header-content .header-content-inner h1 {
      margin-top: 0;
      margin-bottom: 60px; }
      @media (min-width: 769px) {
        header .header-content .header-content-inner h1 {
          font-size: 46px !important; } }
    header .header-content .header-content-inner p {
      font-weight: 300;
      color: rgba(255, 255, 255, 0.7);
      font-size: 16px;
      margin-bottom: 50px; }
/* ... */

